# renatic

./: Cargo.toml  README.md
src/: config.rs  consts.rs  content.rs  feed.rs  gen.rs  generator.rs  index.rs  main.rs  meta.rs  post.rs  renderer.rs  rss.rs  templating.rs
src/sources/: content.rs  entry.rs  meta.rs  mod.rs
src/util/: minifier.rs  mod.rs  parser.rs  rss.rs
