[package]
name = "renatic"
version = "0.0.1"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
edition = "2021"
description = "A flexible and customizable static site generator"
readme = "README.md"
homepage = "https://github.com/rijkvp/renatic"
repository = "https://github.com/rijkvp/renatic"
license = "GPL-3.0"
keywords = ["static", "site", "generator", "blog"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dirs = "4"
log = "0.4"
tera = { version = "1.15", features = ["builtins"] }
pulldown-cmark = "0.9"
chrono = { version = "0.4", features = ["serde"] }
# Use the alpha 'unflatten' feature of quick-xml
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
env_logger = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
